@@ -77,5 +77,6 @@ extern const AVProfile ff_prores_profiles[];
 extern const AVProfile ff_mjpeg_profiles[];
 extern const AVProfile ff_arib_caption_profiles[];
 extern const AVProfile ff_evc_profiles[];
+extern const AVProfile ff_apv_profiles[];
 
 #endif /* AVCODEC_PROFILES_H */
